update mysql note

--- a/数据库.md
+++ b/数据库.md
@@ -1,10 +1,18 @@
 # MySQL
 
-### 索引
 
-索引是帮助MySQL搞笑获取数据的排好序的数据结构
 
-#### 索引数据结构
+
+
+[TOC]
+
+
+
+## 索引
+
+索引是帮助MySQL高效获取数据的排好序的数据结构，它提前按照一定的规则进行排序和组织，能够帮助快速定位记录。
+
+### 索引数据结构
 
 #### B+树：
 
@@ -36,7 +44,7 @@ Mysql**索引使用不使用二叉树而使用B+树的原因**
 
 
 
-#### MyISAM引擎
+##### MyISAM存储引擎
 
 - 早期的默认存储引擎，适用于 MySQL 5.5.5 之前的版本。
 - 不支持事务和行级锁定，但提供全文搜索功能。
@@ -48,22 +56,27 @@ Mysql**索引使用不使用二叉树而使用B+树的原因**
 
 
 
-#### InnoDB引擎
+##### InnoDB存储引擎
 
 - 是 MySQL 的默认存储引擎（自 MySQL 5.5.5 版本开始）。
 - 支持事务处理，具备 ACID（原子性、一致性、隔离性、持久性）属性。
 - 提供行级锁定和外键约束支持。
 - 适合处理大量数据的情况，优秀的崩溃恢复能力。
 
-##### InnoDB索引实现（聚集索引）
+##### InnoDB索引实现（默认为主键创建聚集索引）
 
 + 表数据按照B+Tree组织一个索引结构文件
 + 聚集索引-叶子结点包含完整记录
 + InnoDB建议必须建立主键，推荐使用**整形自增**主键：整形方便比较，自增因为要求有顺序每个节点有存储上限，自增的索引可以减少平衡次数
++ InnoDB二级索引，所谓非主键索引都可以称为二级索引，**二级索引是非聚集索引**，需要回表
+
+
 
 
 
 #### 哈希索引（不常用因为无法范围查找）
+
+Memory引擎支持
 
 1. ##### **快速查找**：
 
@@ -84,15 +97,26 @@ Mysql**索引使用不使用二叉树而使用B+树的原因**
 ##### 使用场景
 
 - **适合场景**：
+
   - 适合于高速查找和频繁更新的场景。
   - 适用于需要快速查找特定键值的应用，如缓存系统。
+
 - **不适合场景**：
+
   - 不适合于需要进行范围查询的场景。
   - 对于具有大量重复键值的数据不太有效。
 
+  
+
+#### Full-text索引
+
+全文索引（Full-text Index）是数据库中用于提升全文搜索效率的一种特殊类型的索引。它主要用于搜索文本中的关键词，而不是比较文本整体的相等性。这种索引适用于寻找包含某些词（单词或短语）的文档或记录，特别适用于大量文本数据的搜索，如文章、邮件内容、产品描述等。
 
 
-#### 复合（联合）索引的结构
+
+
+
+### 复合（联合）索引的结构
 
 假设有一个复合索引包含三个列：`(A, B, C)`。这个索引可以被视为按照列 A、列 B 和列 C 排序的数据列表。
 
@@ -119,3 +143,24 @@ Mysql**索引使用不使用二叉树而使用B+树的原因**
   - 这个查询无法利用索引，因为它没有使用索引的最左列。
 - `SELECT * FROM users WHERE first_name = 'John' AND age = 30`：
   - 这个查询只能部分利用索引（仅针对 `first_name`），因为 `age` 不是紧随 `first_name` 的列。
+
+
+
+### 索引覆盖
+
+需要查询的字段都在索引烈当中，不需要回表等，就是覆盖查询
+
+
+
+### 索引的使用和优缺点
+
+优点：
+
++ 提高检索效率
++ 降低排序成本，索引对应字段有自动排序的功能
+
+缺点：
+
++ 创建和维护索引耗费时间，数据越多耗费的时间越多
++ 索引占用的物理空间随着数据量增大而增大
++ 降低表的增删改效率，需要动态维护
