--- a/算法题.md
+++ b/算法题.md
@@ -1,2 +1,20 @@
 # 算法题
 
+### 链表
+
+链表题设置dummyNode
+
+链表题设着prev，curr，next三个指针
+
+链表题必要的时候获可以先取链表长度，时间n
+
+
+
+链表倒序方法
+
+1）直接法，初始化只用一个真节点指针curr，之后同时占用两个，不容易越界
+
+2）环绕法，初始化占用三个真节点，但保留断口指针prev，新尾部指针，后段口
+
+
+
