--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,6 +1,16 @@
 # 计算机网络
 
-## 五层协议
+
+
+![tcp1](./img/tcp1.png)
+
+
+
+![tcp2](./img/tcp2.jpg)
+
+
+
+### 五层协议
 
 1. **物理层 (Physical Layer)**:
    - 主要任务：定义物理设备（例如，电缆、交换机、网卡等）之间如何传输原始的比特流。
