--- a/计算机网络.md
+++ b/计算机网络.md
@@ -8,6 +8,14 @@
 
 ![tcp2](./img/tcp2.jpg)
 
+TCP UDP区别
+
++ TCP 是一种面向连接的协议。在数据传输前，它需要先建立连接（通过三次握手过程），之后才开始数据传输。UDP无连接
++ TCP可靠传输（顺序，重传）慢，UDP无保证，快
++ TCP拥塞控制，UDP无
+
+
+
 
 
 ### 五层协议
@@ -56,6 +64,38 @@
    - 客户端端口: 68
 9. **TFTP (Trivial File Transfer Protocol)**:
    - 端口号: 69
+
+
+
+在HTTPS通信中，TCP握手和TLS握手是两个相继发生的过程，它们并不是同时发生的。
+
+#### TLS 握手有哪些步骤？
+
+TLS 握手是由客户端和服务器交换的一系列数据报或消息。TLS 握手涉及多个步骤，因为客户端和服务器要交换完成握手和进行进一步对话所需的信息。
+
+TLS 握手中的确切步骤将根据所使用的密钥交换算法的种类和双方支持的密码套件而有所不同。RSA 密钥交换算法虽然现在被认为不安全，但曾在 1.3 之前的 TLS 版本中使用。大致如下：
+
+1. **“客户端问候（client hello）” 消息：** 客户端通过向服务器发送“问候”消息来开始握手。该消息将包含客户端支持的 TLS 版本，支持的密码套件，以及称为一串称为“客户端随机数（client random）”的随机字节。
+2. **“服务器问候（server hello）”消息：** 作为对 client hello 消息的回复，服务器发送一条消息，内含服务器的 [SSL 证书](https://www.cloudflare.com/learning/ssl/what-is-an-ssl-certificate/)、服务器选择的密码套件，以及“服务器随机数（server random）”，即由服务器生成的另一串随机字节。
+3. **身份验证：** 客户端使用颁发该证书的证书颁发机构验证服务器的 SSL 证书。此举确认服务器是其声称的身份，且客户端正在与该域的实际所有者进行交互。
+4. **预主密钥：** 客户端再发送一串随机字节，即“预主密钥（premaster secret）”。预主密钥是使用公钥加密的，只能使用服务器的私钥解密。（客户端从服务器的 SSL 证书中获得[公钥](https://www.cloudflare.com/learning/ssl/how-does-public-key-encryption-work/)。）
+5. **私钥被使用：**服务器对预主密钥进行解密。
+6. **生成会话密钥：**客户端和服务器均使用客户端随机数、服务器随机数和预主密钥生成会话密钥。双方应得到相同的结果。
+7. **客户端就绪：**客户端发送一条“已完成”消息，该消息用会话密钥加密。
+8. **服务器就绪：**服务器发送一条“已完成”消息，该消息用会话密钥加密。
+9. **实现安全对称加密：**已完成握手，并使用会话密钥继续进行通信。
+
+#### TLS 1.3 中的握手有什么不同？
+
+TLS 1.3 不支持 RSA，也不支持易受攻击的其他密码套件和参数。它还缩短了 TLS 握手，使 TLS 1.3 握手更快更安全。
+
+TLS 1.3 握手的基本步骤为：
+
+- **客户端问候：**客户端发送客户端问候消息，内含协议版本、客户端随机数和密码套件列表。由于已从 TLS 1.3 中删除了对不安全密码套件的支持，因此可能的密码套件数量大大减少。客户端问候消息还包括将用于计算预主密钥的参数。大体上来说，客户端假设它知道服务器的首选密钥交换方法（由于简化的密码套件列表，它有可能知道）。这减少了握手的总长度——这是 TLS 1.3 握手与 TLS 1.0、1.1 和 1.2 握手之间的重要区别之一。
+- **服务器生成主密钥：**此时，服务器已经接收到客户端随机数以及客户端的参数和密码套件。它已经拥有服务器随机数，因为它可以自己生成。因此，服务器可以创建主密钥。
+- **服务器问候和“完成”：**服务器问候包括服务器的证书、数字签名、服务器随机数和选择的密码套件。因为它已经有了主密钥，所以它也发送了一个“完成”消息。
+- **最后步骤和客户端“完成”：**客户端验证签名和证书，生成主密钥，并发送“完成”消息。
+- **实现安全对称加密**
 
 
 
