--- a/计算机网络.md
+++ b/计算机网络.md
@@ -16,6 +16,36 @@ TCP UDP区别
 
 
 
+![tcp3](./img/tcp3.png)
+
+### 1. 慢启动（Slow Start)
+
+- **初始化**：TCP连接建立时，拥塞窗口（cwnd）初始化为一个较小的值（如TCP段大小的两倍）。
+- **指数增长**：每当收到一个ACK，拥塞窗口cwnd增加一个段的大小。这导致窗口大小每个RTT（往返时延）指数增长。
+- **阈值**：直到cwnd达到一个阈值（ssthresh），慢启动过程结束。阈值通常是网络拥塞发生前的窗口大小。
+
+### 2. 拥塞避免（Congestion Avoidance）
+
+- **触发：** 一旦cwnd达到ssthresh，进入拥塞避免阶段。
+- **线性增长**：在这个阶段，每个RTT cwnd线性增长。
+- **目的**：避免由于过度增加发送速率而导致网络拥塞。
+
+### 3. 快速重传（Fast Retransmit）
+
+- **触发**：如果发送方收到三个重复的ACK，意味着一个报文段可能丢失，快速重传机制被触发。
+- **重传丢失的段**：而不是等待重传定时器到期。
+
+### 4. 快速恢复（Fast Recovery）
+
+- **触发**：当发送方连续收到三个重复确认时，就执行“乘法减小”算法
+- **调整阈值**：ssthresh设置为当前cwnd的一半。
+- **增加cwnd**：cwnd设置为新的ssthresh加上3倍的段大小（反映了重复ACK的数量）。
+- **继续传输**：如果继续收到重复ACK，cwnd继续增加。收到新的ACK后，将cwnd设置为ssthresh（即进入拥塞避免阶段）。
+
+### 网络拥塞的信号
+
+TCP使用丢包作为网络拥塞的主要信号。当丢包发生时，TCP认为网络出现拥塞，并触发上述控制机制以降低发送速率。
+
 
 
 ### 五层协议
@@ -96,6 +126,10 @@ TLS 1.3 握手的基本步骤为：
 - **服务器问候和“完成”：**服务器问候包括服务器的证书、数字签名、服务器随机数和选择的密码套件。因为它已经有了主密钥，所以它也发送了一个“完成”消息。
 - **最后步骤和客户端“完成”：**客户端验证签名和证书，生成主密钥，并发送“完成”消息。
 - **实现安全对称加密**
+
+https://www.cloudflare.com/zh-cn/learning/ssl/what-happens-in-a-tls-handshake/
+
+
 
 
 
