--- a/面试.md
+++ b/面试.md
@@ -20,6 +20,18 @@ JDK 包括 JRE 包括 JVM
 
 
 
+### Java 类执行流程
+
+1. 编写源代码： .java
+2. 编译源代码： java编译器（javac）将 .java --> .class包含了java类的字节码
+3. 类加载：JVM加载 .class 
+   1. 加载：查找字节码并从文件系统或其他源创建一个 Class 对象。
+   2. 链接：
+   3. 初始化：
+4. JVM执行字节码 例如 main
+
+
+
 
 
 ### hashCode(), equals()
