--- a/数据库.md
+++ b/数据库.md
@@ -286,6 +286,43 @@ MVCC 的多版本指的是多个版本的快照，快照存储在 Undo 日志中
 
 ### 锁
 
+#### MySQL中的锁分类
+
+- 按粒度分**表锁**、**行锁**和**页锁**三种，
+
+- 按类型分**读锁和写锁(都属于悲观锁)**两种。
+
+- 按性能分**乐观锁**、**悲观锁和意向锁**。
+
+##### 表锁，行错，页锁
+
++ 表锁： **开销小，加锁快；不会出现死锁；**锁定粒度大，发生锁冲突的概率最高，并发度最低；一般用在整表数据迁移的场景。
++ 行锁：**开销大，加锁慢；会出现死锁；**锁定粒度最小，发生锁冲突的概率最低，并发度最高。在 MySQL 中，**行锁是基于索引加载的**，即行锁是要加在索引响应的行上。**索引失效时会升级为表锁。**
++ 页锁：只有BDB存储引擎支持页锁，页锁就是在页的粒度上进行锁定，锁定的数据资源比行锁要多，因为一个页中可以有多个行记录。
+
+##### 读锁、写锁、意向锁
+
+读锁（共享锁，S锁（shared））：
+
+多个读操作对同一个资源共享同一个锁，多个读操作可以同时进行而不会互相影响。因为读操作并不会改变数据内容，所以多个事务可以共享同一个锁，并行地读取同一个资源，这样可以提高并发效率。
+
+写锁（排它锁，X锁（exclude））：
+
+当两个事务同时对表中某行数据进行更新操作时，若一个事务先到达并给该行加上排它锁，那么另一个事务就不能在该行加任意类型的锁，直到第一个事务释放了该行的锁。因此，排它锁可以确保在同一时间只有一个事务可以对被加锁的资源进行修改操作，从而避免出现数据竞争和不一致问题。
+
+意向锁（I锁（Intent Lock））：
+
+数据库中的一种表级锁，在行级锁的基础上引入的一种概念。意向锁是用于解决多粒度锁定而设计的，可以避免行级锁和表级锁之间的冲突。
+意向锁分为两种类型：**意向共享锁（Intention Shared Lock, IS）和意向排他锁（Intention Exclusive Lock, IX）**。
+
+- **意向共享锁（IS）**：在一个事务需要对表中某些行加共享锁（S锁）时，事务首先需要获得表的意向共享锁（IS锁）
+
+- **意向排他锁（IX）**：指的是在一个事务需要对表中某些行加排它锁（X锁）时，事务首先需要获得表的意向排它锁（IX锁）。
+
+**意向锁简单来说就是添加行锁时，给表添加一个标识表明该表已经存在共享锁或者是排它锁，其他事务需要加锁直接读取该标识判断是否已经存在锁。**
+
+
+
 MVCC 的 SELECT 操作是快照中的数据，不需要进行加锁操作。但可以强制指定进行加锁操作。
 
 MVCC 其它会对数据库进行修改的操作（INSERT、UPDATE、DELETE）需要进行加锁操作，从而读取最新的数据。可以看到 MVCC 并不是完全不用加锁，而只是避免了 SELECT 的加锁操作。
