--- a/数据库.md
+++ b/数据库.md
@@ -154,6 +154,10 @@ Memory引擎支持
 
 需要查询的字段都在索引列当中，不需要回表等，就是覆盖查询
 
+**覆盖索引**是指一个索引包含（或“覆盖”）了查询所需的所有数据。换句话说，如果一个查询能够仅通过访问索引就获取其需要的所有信息，而不需要回表查询原始数据行，那么这个索引就被称为覆盖索引。
+
+当执行一个查询时，如果数据库可以仅通过访问索引来获取所需的所有数据列，它就不需要再去访问数据表中的实际数据行。这减少了数据访问的数量，因此可以显著提高查询速度。
+
 
 
 ### 索引的使用和优缺点
@@ -320,6 +324,20 @@ MVCC 的多版本指的是多个版本的快照，快照存储在 Undo 日志中
 - **意向排他锁（IX）**：指的是在一个事务需要对表中某些行加排它锁（X锁）时，事务首先需要获得表的意向排它锁（IX锁）。
 
 **意向锁简单来说就是添加行锁时，给表添加一个标识表明该表已经存在共享锁或者是排它锁，其他事务需要加锁直接读取该标识判断是否已经存在锁。**
+
+
+
+
+
+##### 悲观锁
+
+总是假设最坏的情况，每次去拿数据的时候都认为别人会修改，所以每次在拿数据的时候都会上锁，这样别人想拿这个数据就会阻塞直到它拿到锁（**共享资源每次只给一个线程使用，其它线程阻塞，用完后再把资源转让给其它线程**）。传统的关系型数据库里边就用到了很多这种锁机制，比如行锁，表锁等，读锁，写锁等，都是在做操作之前先上锁。Java中`synchronized`和`ReentrantLock`等独占锁就是悲观锁思想的实现。
+
+
+
+##### **乐观锁**
+
+总是假设最好的情况，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下在此期间别人有没有去更新这个数据，可以使用版本号机制和CAS算法实现。**乐观锁适用于多读的应用类型，这样可以提高吞吐量**，像数据库提供的类似于**write_condition机制**，其实都是提供的乐观锁。在Java中`java.util.concurrent.atomic`包下面的原子变量类就是使用了乐观锁的一种实现方式**CAS**实现的。
 
 
 
