--- a/计算机网络.md
+++ b/计算机网络.md
@@ -133,6 +133,12 @@ https://www.cloudflare.com/zh-cn/learning/ssl/what-happens-in-a-tls-handshake/
 
 
 
+### JWT认证
+
+https://www.ruanyifeng.com/blog/2018/07/json_web_token-tutorial.html
+
+
+
 ### Web 页面请求过程
 
 1. **DHCP 配置主机信息**
