--- a/数据库.md
+++ b/数据库.md
@@ -382,3 +382,17 @@ MVCC 其它会对数据库进行修改的操作（INSERT、UPDATE、DELETE）需
 
 - 在需要确保多个更改作为一个整体一起成功或失败时，应使用显式事务。这对于维护数据完整性和一致性非常重要。
 - 例如，在转账操作中，从一个账户扣款并向另一个账户存款应该作为一个事务来处理。
+
+
+
+## 优化
+
+#### 慢SQL你是怎么优化的
+
+针对SQL慢查询，可以考虑以下一些优化措施：
+
+1. **优化查询语句结构：**检查是否存在冗余的操作、重复的子查询、不必要的排序、大量的JOIN操作等。优化查询语句的结构和逻辑，减少不必要的数据读取和计算。
+2. **添加合适的索引：**确保查询中涉及的列都有适当的索引，并且查询条件能够充分利用索引。通过使用适当的索引，提高查询的性能。但是要避免过多的索引，因为过多的索引会增加写入操作的开销。
+3. **使用覆盖索引：**如果查询只需要使用索引列的数据而不需要访问表的其他列，可以考虑使用覆盖索引。覆盖索引避免了访问表的额外IO操作，提高查询性能。
+4. **避免全表扫描：**尽量避免全表扫描的情况，通过合适的索引或筛选条件来限制查询范围，减少数据读取量。
+5. **合理分页查询：**对于大数据量的分页查询，可以通过使用LIMIT分页、使用游标、定期同步缓存等方式来提高性能。
