--- a/数据库.md
+++ b/数据库.md
@@ -396,3 +396,25 @@ MVCC 其它会对数据库进行修改的操作（INSERT、UPDATE、DELETE）需
 3. **使用覆盖索引：**如果查询只需要使用索引列的数据而不需要访问表的其他列，可以考虑使用覆盖索引。覆盖索引避免了访问表的额外IO操作，提高查询性能。
 4. **避免全表扫描：**尽量避免全表扫描的情况，通过合适的索引或筛选条件来限制查询范围，减少数据读取量。
 5. **合理分页查询：**对于大数据量的分页查询，可以通过使用LIMIT分页、使用游标、定期同步缓存等方式来提高性能。
+
+
+
+#### 如何优化深分页limit 1000000
+
+```sql
+SELECT * FROM table ORDER BY id LIMIT 1000000, 10;
+```
+
+**`LIMIT 1000000, 10`：**
+
+- `LIMIT` 子句用于限制 SQL 查询结果的数量。
+- `LIMIT 1000000, 10` 有两个数字，第一个数字是偏移量，第二个数字是结果数量。
+- 这里 `1000000` 表示从第 1000000 行开始获取数据（注意行数是从 0 开始计算的，所以这实际上是跳过前 999999 行数据）。
+- `10` 表示从该起点开始获取 10 行数据。
+
+
+
+1. **使用覆盖索引：** 覆盖索引可以让 MySQL 在索引中获取所有需要的数据，而无需回表查询。这可以大大提高查询速度。
+2. **记住上次的位置：** 如果你的应用程序可以记住上次查询的最后一个 ID，那么你可以使用 WHERE 子句来避免扫描大量数据。
+3. **使用分页插件：** 有些数据库框架提供了分页插件，可以自动优化分页查询。
+4. **避免深分页：** 在设计应用程序时，尽量避免深分页。例如，你可以提供搜索功能，让用户快速找到他们需要的数据，而不是浏览大量的页面。
