--- a/面试.md
+++ b/面试.md
@@ -132,3 +132,15 @@ Java 8 中的 HashMap
    - Java 8 对哈希函数进行了优化，提高了散列效果，减少了哈希碰撞的可能性。
 4. **添加和删除操作**：**尾插法**
    - Java 8 使用尾插法来添加新的元素到链表或树中，这种方法在某些场景下可以减少重新哈希的次数。
+
+
+
+### 1 亿个数据取出最大前 100 个有什么方法
+
+要从1亿个数据中找出最大的前100个，通常可以使用堆（Heap）数据结构来实现，特别是最小堆（Min Heap）。
+以下是一种常见的方法：
+1创建一个最小堆，并将前100个数据插入堆中。
+2遍历剩余的数据，对于每个数据，如果它比堆顶的元素大，就将堆顶元素弹出，然后将当前数据插入堆中。
+3继续遍历所有数据，不断地维护堆，确保堆中保留的是最大的100个数据。
+4当遍历完成后，堆中的元素就是前100个最大的数据。
+这种方法的时间复杂度是O(N * log(100))，其中N是数据总数，因为在堆中保持了100个元素。这比将所有数据排序的时间复杂度要低得多。
